Connect contact form to email service

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,13 @@
 
       <section class="section">
         <div class="container contact-grid">
-          <form class="contact-form card reveal" style="--delay: 0.08s">
+          <form
+            class="contact-form card reveal"
+            style="--delay: 0.08s"
+            action="https://formspree.io/f/YOUR_FORM_ID"
+            method="POST"
+            data-service="formspree"
+          >
             <h2>Send a Message</h2>
             <label for="name">Full name</label>
             <input id="name" name="name" type="text" placeholder="Your name" required />
@@ -104,7 +110,7 @@
             <div class="card" style="margin-top: 20px">
               <h3>General Contact</h3>
               <p>Edmonton + Calgary, Alberta</p>
-              <p>info@albertapunjabiassociation.org</p>
+              <p>apa.alberta7@gmail.com</p>
               <p>Volunteer • Partner • Sponsor</p>
             </div>
           </div>
@@ -131,7 +137,7 @@
         <div class="footer-links">
           <strong>Connect</strong>
           <span>Edmonton + Calgary, Alberta</span>
-          <span>info@albertapunjabiassociation.org</span>
+          <span>apa.alberta7@gmail.com</span>
           <span>Volunteer • Partner • Sponsor</span>
         </div>
       </div>
