--- a/sponsorship.html
+++ b/sponsorship.html
@@ -165,7 +165,7 @@
         <div class="footer-links">
           <strong>Connect</strong>
           <span>Edmonton + Calgary, Alberta</span>
-          <span>info@albertapunjabiassociation.org</span>
+          <span>apa.alberta7@gmail.com</span>
           <span>Volunteer • Partner • Sponsor</span>
         </div>
       </div>
